--- a/Lesson9/anna/index.html
+++ b/Lesson9/anna/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Anna's Page</h1>
   <p>Hi, I'm Anna. I'm a web developer.</p>
-  <p>Check out my projects on <a href="">Github</a></p>
+  <p>Check out my projects on <a href="https://github.com">Github</a></p>
 </body>
 </html>
