--- a/Lesson9/anna/index.html
+++ b/Lesson9/anna/index.html
@@ -10,5 +10,9 @@
   <h1>Anna's Page</h1>
   <p>Hi, I'm Anna. I'm a web developer.</p>
   <p>Check out my projects on <a href="https://github.com">Github</a></p>
+
+  <footer>
+    <p>&copy; 2024 Anna</p>
+  </footer>
 </body>
 </html>
