Update index.html to reflect Cihan's name and improve formatting

--- a/Lesson9/cihan/index.html
+++ b/Lesson9/cihan/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Git & Github</title>
-  <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
-  <h1>Anna's Page</h1>
-  <p>Hi, I'm Anna. I'm a web developer.</p>
-  <p>Check out my projects on <a href="https://github.com">Github</a></p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Git & Github</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <h1>Anna's Page</h1>
+    <p>Hi, I'm Cihan. I'm a web developer.</p>
+    <p>Check out my projects on <a href="https://github.com">Github</a></p>
 
-  <footer>
-    <p>&copy; 2024 Anna</p>
-  </footer>
-</body>
+    <footer>
+      <p>&copy; 2024 Anna</p>
+    </footer>
+  </body>
 </html>
