--- a/Lesson9/cihan/index.html
+++ b/Lesson9/cihan/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Anna's Page</h1>
+    <h1>Cihan's Page</h1>
     <p>Hi, I'm Cihan. I'm a web developer.</p>
-    <p>Check out my projects on <a href="https://github.com">Github</a></p>
+    <p>
+      Check out my projects on
+      <a
+        href="https://github.com/frontend-from-0/100125-exercises/blob/lesson9-cihan/Lesson9/cihan/index.html"
+        >Github</a
+      >
+    </p>
 
     <footer>
       <p>&copy; 2024 Anna</p>
