--- a/Lesson9/omer/index.html
+++ b/Lesson9/omer/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ömer' Page</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <h1>Hi, I'm Ömer</h1>
