--- a/Lesson9/aysen/index.html
+++ b/Lesson9/aysen/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome AyS's Page</title>
+    <title>Welcome AySen's Page</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Hello From Ays!</h1>
+    <h1>Hello From Aysen!</h1>
 </body>
 </html> 
