Refactor price display in index.html and streamline clear cart functionality in script.js

--- a/Lesson22/batikan/index.html
+++ b/Lesson22/batikan/index.html
@@ -67,7 +67,7 @@
                 >
                   Add to Cart
                 </button>
-                <span class="text-sm">$<span id="elementPrice">5</span></span>
+                <span class="text-sm">$<span>5</span></span>
               </div>
             </div>
             <div
@@ -96,7 +96,7 @@
                 >
                   Add to Cart
                 </button>
-                <span class="text-sm">$<span id="elementPrice">3</span></span>
+                <span class="text-sm">$<span>3</span></span>
               </div>
             </div>
             <div
@@ -125,7 +125,7 @@
                 >
                   Add to Cart
                 </button>
-                <span class="text-sm">$<span id="elementPrice">4</span></span>
+                <span class="text-sm">$<span>4</span></span>
               </div>
             </div>
             <div
@@ -154,7 +154,7 @@
                 >
                   Add to Cart
                 </button>
-                <span class="text-sm">$<span id="elementPrice">4</span></span>
+                <span class="text-sm">$<span>4</span></span>
               </div>
             </div>
             <div
