Refactor error handling in checkout form: unify error message elements and improve validation logic

--- a/Lesson21/batikan/index.html
+++ b/Lesson21/batikan/index.html
@@ -32,8 +32,7 @@
             placeholder="email@example.com"
             name="email"
           />
-          <div id="emailErrorContainer" class="speech-bubble hidden">
-            <p id="emailError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
         <div class="input-group">
@@ -44,8 +43,7 @@
             placeholder="555 123 4567"
             name="phoneNumber"
           />
-          <div id="phoneErrorContainer" class="speech-bubble hidden">
-            <p id="phoneError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
         <div class="input-group">
@@ -56,8 +54,7 @@
             placeholder="Sophia"
             name="firstname"
           />
-          <div id="firstNameErrorContainer" class="speech-bubble hidden">
-            <p id="firstNameError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
         <div class="input-group">
@@ -68,8 +65,7 @@
             placeholder="Clark"
             name="lastname"
           />
-          <div id="lastNameErrorContainer" class="speech-bubble hidden">
-            <p id="lastNameError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
 
@@ -81,31 +77,27 @@
             placeholder="123 Maple Street"
             name="address"
           />
-          <div id="addressErrorContainer" class="speech-bubble hidden">
-            <p id="addressError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
 
         <div class="input-group">
           <label for="city">City</label>
           <input id="city" type="text" placeholder="Anytown" name="city" />
-          <div id="cityErrorContainer" class="speech-bubble hidden">
-            <p id="cityError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
 
         <div class="input-group">
           <label for="state">State</label>
           <input id="state" type="text" placeholder="Anystate" name="state" />
-          <div id="stateErrorContainer" class="speech-bubble hidden">
-            <p id="stateError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
         <div class="input-group">
           <label for="zipcode">Zip Code</label>
           <input id="zipcode" type="text" placeholder="90210" name="zipcode" />
-          <div id="zipErrorContainer" class="speech-bubble hidden">
-            <p id="zipError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
 
@@ -117,22 +109,19 @@
             placeholder="1234 5678 9101 1121"
             name="cardnumber"
           />
-          <div id="cardNumberErrorContainer" class="speech-bubble hidden">
             <p id="cardNumberError" class="input-error"></p>
           </div>
         </div>
         <div class="input-group">
           <label for="expDate">Expiration Date</label>
           <input id="expDate" type="text" placeholder="MM/YY" name="expDate" />
-          <div id="expDateErrorContainer" class="speech-bubble hidden">
-            <p id="expDateError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
         <div class="input-group">
           <label for="cvv">CVV</label>
           <input id="cvv" type="text" placeholder="123" name="cvv" />
-          <div id="cvvErrorContainer" class="speech-bubble hidden">
-            <p id="cvvError" class="input-error"></p>
+            <p id="errorText" class="input-error"></p>
           </div>
         </div>
         <div>
