--- a/Lesson22/batikan/index.html
+++ b/Lesson22/batikan/index.html
@@ -187,11 +187,26 @@
               >
                 Organic Apples
               </p>
-              <p
-                class="text-[#974e52] text-sm font-normal leading-normal line-clamp-2"
-              >
-                Quantity: <span id="apples_quantity">0</span>
-              </p>
+              <div class="flex items-center gap-2">
+                <span class="text-[#974e52] text-sm font-normal leading-normal">
+                  Quantity:
+                </span>
+                <div class="flex items-center gap-2">
+                  <button
+                    id="apples_decrease"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    −
+                  </button>
+                  <span id="apples_quantity" class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center">0</span>
+                  <button
+                    id="apples_increase"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    +
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="shrink-0">
@@ -220,11 +235,26 @@
               >
                 Fresh Bananas
               </p>
-              <p
-                class="text-[#974e52] text-sm font-normal leading-normal line-clamp-2"
-              >
-                Quantity: <span id="bananas_quantity">0</span>
-              </p>
+              <div class="flex items-center gap-2">
+                <span class="text-[#974e52] text-sm font-normal leading-normal">
+                  Quantity:
+                </span>
+                <div class="flex items-center gap-2">
+                  <button
+                    id="bananas_decrease"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    −
+                  </button>
+                  <span id="bananas_quantity" class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center">0</span>
+                  <button
+                    id="bananas_increase"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    +
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="shrink-0">
@@ -253,11 +283,26 @@
               >
                 Whole Wheat Bread
               </p>
-              <p
-                class="text-[#974e52] text-sm font-normal leading-normal line-clamp-2"
-              >
-                Quantity: <span id="bread_quantity">0</span>
-              </p>
+              <div class="flex items-center gap-2">
+                <span class="text-[#974e52] text-sm font-normal leading-normal">
+                  Quantity:
+                </span>
+                <div class="flex items-center gap-2">
+                  <button
+                    id="bread_decrease"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    −
+                  </button>
+                  <span id="bread_quantity" class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center">0</span>
+                  <button
+                    id="bread_increase"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    +
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="shrink-0">
@@ -286,11 +331,26 @@
               >
                 Free-Range Eggs
               </p>
-              <p
-                class="text-[#974e52] text-sm font-normal leading-normal line-clamp-2"
-              >
-                Quantity: <span id="eggs_quantity">0</span>
-              </p>
+              <div class="flex items-center gap-2">
+                <span class="text-[#974e52] text-sm font-normal leading-normal">
+                  Quantity:
+                </span>
+                <div class="flex items-center gap-2">
+                  <button
+                    id="eggs_decrease"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    −
+                  </button>
+                  <span id="eggs_quantity" class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center">0</span>
+                  <button
+                    id="eggs_increase"
+                    class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
+                  >
+                    +
+                  </button>
+                </div>
+              </div>
             </div>
           </div>
           <div class="shrink-0">
