--- a/Lesson23/aysen/index.html
+++ b/Lesson23/aysen/index.html
@@ -49,241 +49,21 @@
         >
           Products
         </h2>
-        <div id="products-container">
-         
-        </div>
+        <div id="products-container"></div>
         <div class="">
           <h2
             class="text-[#1b0e0f] text-lg font-bold leading-tight tracking-[-0.015em] px-4 pb-2 pt-4"
           >
             Cart Preview
           </h2>
-          <!-- <div
-            id="apples_cart"
-            class="flex items-center gap-4 bg-[#fcf8f8] px-4 min-h-[72px] py-2 justify-between"
-          >
-            <div class="flex items-center gap-4">
-              <div
-                class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg size-14"
-                style="
-                  background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBbbsopw7TufE_NsVRUSUEVaB1WTKqsp7GygcAox7EtZDKDh6JrYvwo9_EguRHJFwcyi4nztz-qCh-1juay3nr988f8CYov-n2M4xpaWoeGemjnxacToiiWKqo8_Y3dW5lc_NsJjtUh6qMA5oPWaCX1yix-grkOZpr6XhgrKvB149b-wRehV3DBGWlBeG9Kz4WDymEeCok_gjGKtF3VldEPX5aE4RKcYpMuffkSmdQh9d7ODVHp1222SP7hVpjtyY16Q9gz8s4YdQY');
-                "
-              ></div>
-              <div class="flex flex-col justify-center">
-                <p
-                  class="text-[#1b0e0f] text-base font-medium leading-normal line-clamp-1"
-                >
-                  Organic Apples
-                </p>
-                <div class="flex items-center gap-2">
-                  <span
-                    class="text-[#974e52] text-sm font-normal leading-normal"
-                  >
-                    Quantity:
-                  </span>
-                  <div class="flex items-center gap-2">
-                    <button
-                      id="apples_decrease"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      −
-                    </button>
-                    <span
-                      id="apples_quantity"
-                      class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center"
-                      >0</span
-                    >
-                    <button
-                      id="apples_increase"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      +
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="shrink-0">
-              <button
-                id="apples_remove"
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium leading-normal w-fit"
-              >
-                Remove
-              </button>
-            </div>
-          </div>
-          <div
-            id="bananas_cart"
-            class="flex items-center gap-4 bg-[#fcf8f8] px-4 min-h-[72px] py-2 justify-between"
-          >
-            <div class="flex items-center gap-4">
-              <div
-                class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg size-14"
-                style="
-                  background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuCSZAI70AUHVQdcJc0lDzYkk0xVw45SHDUJ_eo4JQ-2_orMmrbkTSPb43oIOSWNy9NdHhTUFdLIWQo8BezIHX_khraKfZ3SgsbloPB0lkHBC9k1aBV8GEm_BrN_vnP_pxrf6WWbjvOkQ8huHd3lCbaTw_UZkdN-8I47ippp5Us3Vdp-y-yXnrpsjEB3ma7j_61I2p7UgO_4XoJT7JbnhB-TJs9tH7YPtcUTkXTlt5FEO8oCSA6IizYpjyrNzMgVsaB2mZsQ7UjEJ8Y');
-                "
-              ></div>
-              <div class="flex flex-col justify-center">
-                <p
-                  class="text-[#1b0e0f] text-base font-medium leading-normal line-clamp-1"
-                >
-                  Fresh Bananas
-                </p>
-                <div class="flex items-center gap-2">
-                  <span
-                    class="text-[#974e52] text-sm font-normal leading-normal"
-                  >
-                    Quantity:
-                  </span>
-                  <div class="flex items-center gap-2">
-                    <button
-                      id="bananas_decrease"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      −
-                    </button>
-                    <span
-                      id="bananas_quantity"
-                      class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center"
-                      >0</span
-                    >
-                    <button
-                      id="bananas_increase"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      +
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="shrink-0">
-              <button
-                id="bananas_remove"
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium leading-normal w-fit"
-              >
-                Remove
-              </button>
-            </div>
-          </div>
-          <div
-            id="bread_cart"
-            class="flex items-center gap-4 bg-[#fcf8f8] px-4 min-h-[72px] py-2 justify-between"
-          >
-            <div class="flex items-center gap-4">
-              <div
-                class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg size-14"
-                style="
-                  background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuDt-YEQewW5N7QjGWS4i2Y0p6ela2_Dcd4gXIsbGfv6103v3XHLd5Nw-3eOSRCUgBU7Em_SXTbpmyJYDMe-y6Cro7z0wWt3lxF9bJtiQxa5vXRoZYHIJMXrzy3lyViJsl8x2xpHBWwJiwUShoDjTJ8Ep07bybKX6jjGrw4TFiGFEMdl8TSDGo1LxHYs5MIVwouxrV0nQCnYqj4X_tdpUsOFfzmsnQ5nFwqRuet8BxJuYIlfO_5XClODPxgvWmX4jDEtYDTrgTFLjdg');
-                "
-              ></div>
-              <div class="flex flex-col justify-center">
-                <p
-                  class="text-[#1b0e0f] text-base font-medium leading-normal line-clamp-1"
-                >
-                  Whole Wheat Bread
-                </p>
-                <div class="flex items-center gap-2">
-                  <span
-                    class="text-[#974e52] text-sm font-normal leading-normal"
-                  >
-                    Quantity:
-                  </span>
-                  <div class="flex items-center gap-2">
-                    <button
-                      id="bread_decrease"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      −
-                    </button>
-                    <span
-                      id="bread_quantity"
-                      class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center"
-                      >0</span
-                    >
-                    <button
-                      id="bread_increase"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      +
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="shrink-0">
-              <button
-                id="bread_remove"
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium leading-normal w-fit"
-              >
-                Remove
-              </button>
-            </div>
-          </div>
-          <div
-            id="eggs_cart"
-            class="flex items-center gap-4 bg-[#fcf8f8] px-4 min-h-[72px] py-2 justify-between"
-          >
-            <div class="flex items-center gap-4">
-              <div
-                class="bg-center bg-no-repeat aspect-square bg-cover rounded-lg size-14"
-                style="
-                  background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuAYuySW-1BrwLy8KUkkn0d2lKpqnnTSgeQtSfsKKlGz4xLYq5EHFhJNO1gpubUIEpcv9aT2RVi692MmtLlv2vlGzOiYTcVTGlQvNe03h5j3vJYwZeYV4LIkudqDmwwHtd3Txh2Xki2Bv0XsnvjlD0xozT_kcwYXW88TKwJNusWiirmU3zw5SEQQso0NozeeeUSuo_MPKbX6tCT4Yw1IRWlXld__q2KkjKvl7e-cQNZegHA4HY0AwtRVJcG4MYUtraUb8I46wI8s88M');
-                "
-              ></div>
-              <div class="flex flex-col justify-center">
-                <p
-                  class="text-[#1b0e0f] text-base font-medium leading-normal line-clamp-1"
-                >
-                  Free-Range Eggs
-                </p>
-                <div class="flex items-center gap-2">
-                  <span
-                    class="text-[#974e52] text-sm font-normal leading-normal"
-                  >
-                    Quantity:
-                  </span>
-                  <div class="flex items-center gap-2">
-                    <button
-                      id="eggs_decrease"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      −
-                    </button>
-                    <span
-                      id="eggs_quantity"
-                      class="text-[#1b0e0f] text-sm font-medium min-w-[20px] text-center"
-                      >0</span
-                    >
-                    <button
-                      id="eggs_increase"
-                      class="flex items-center justify-center w-6 h-6 rounded-full bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium cursor-pointer hover:bg-[#e8d5d8]"
-                    >
-                      +
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="shrink-0">
-              <button
-                id="eggs_remove"
-                class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 bg-[#f3e7e8] text-[#1b0e0f] text-sm font-medium leading-normal w-fit"
-              >
-                Remove
-              </button>
-            </div>
-          </div> -->
-
-<!-- <div id="cart-preview" class="space-y-2 mt-4"></div> -->
-
-
 
           <p
             class="text-[#974e52] text-sm font-normal leading-normal pb-3 pt-1 px-4"
           >
             Total Price:$<span id="totalPriceId">0</span>
           </p>
+          <ul id="cartList" class="space-y-2 px-4 pt-2"></ul>
+
           <div class="flex px-4 py-3 justify-end">
             <button
               id="clearAllButton"
